2013-05-31  Tobias Burnus  <burnus@net-b.de>

PR fortran/57456
        * trans-array.c (gfc_array_init_size): Use passed type spec,
        when available.
        (gfc_array_allocate): Pass typespec on.
        * trans-array.h (gfc_array_allocate): Update prototype.
        * trans-stmt.c (gfc_trans_allocate): Pass typespec on.

2013-05-31  Tobias Burnus  <burnus@net-b.de>

        PR fortran/57456
        * gfortran.dg/class_array_17.f90: New.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@199528 138bc75d-0d04-0410-961f-82ee72b054a4